[project]
name = "url-shortener"
version = "0.1.0"
description = "A small, fast URL shortener built with FastAPI, PostgreSQL and Redis"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# FastAPI relies on calling Depends()/Query() in argument defaults.
ignore = ["B008"]
